feat: API文档完善 + AI Agent等级定价 + 权限/报表/固定资产模块增强
- 大量 Controller 添加 @Operation/@Schema Swagger 注解完善 API 文档
- AI Agent PartyCapabilityProvider 实现客户等级定价(TODO→真实服务)
- 数据权限拦截器(DataPermissionInterceptor)重写/权限初始化配置增强
- 前端大量页面 VxeTable 组件迁移与 UI 优化(pc-admin/mobile-mall)
- 固定资产模块 DTO/Service 层全面实现
- 报表系统(ReportServiceImpl)增强 / 打印模块(RabbitMQ)优化
- 角色/用户/字典管理后端逻辑完善
- 死代码清理(DistributedLockExample/LeakyBucketExample 移除)

Co-Authored-By: DeepSeek V4 Flash <noreply@atcode.dev>